fix: fix padding in header on mobile

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -218,6 +218,9 @@
 }
 
 @media (max-width: 768px) {
+  .headerWrapper {
+    padding-bottom: 2rem;
+  }
   .desktopNav {
     display: none;
   }
